<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEvent">

    <EditText
        android:id="@+id/rvEventTime"
        android:layout_width="326dp"
        android:layout_height="64dp"
        android:ems="10"
        android:fontFamily="@font/lato"
        android:hint="@string/time"
        android:autofillHints=""
        android:inputType="time"
        android:backgroundTint="@color/dark_pink"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvEventDescription" />

    <EditText
        android:id="@+id/rvEventDescription"
        android:layout_width="326dp"
        android:layout_height="64dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/dark_pink"
        android:fontFamily="@font/lato"
        android:hint="@string/description"
        android:autofillHints=""
        android:inputType="text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvEventTitle" />

    <EditText
        android:id="@+id/rvEventTitle"
        android:layout_width="326dp"
        android:layout_height="64dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/dark_pink"
        android:fontFamily="@font/lato"
        android:hint="@string/title"
        android:inputType="text"
        android:autofillHints=""
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="322dp" />

    <EditText
        android:id="@+id/rvEventDate"
        android:layout_width="326dp"
        android:layout_height="64dp"
        android:ems="10"
        android:fontFamily="@font/lato"
        android:backgroundTint="@color/dark_pink"
        android:textSize="18sp"
        android:hint="@string/date"
        android:autofillHints=""
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvEventTime" />

    <Button
        android:id="@+id/addEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/lato"
        android:text="@string/add"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.869"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvEventDate"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginBottom="20dp"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>